Update description on profit calculation

--- a/intuit_quicken.ipynb
+++ b/intuit_quicken.ipynb
@@ -630,17 +630,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "id": "ef5bb7fb-fdd3-487d-b59e-1fc8af1831fc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_mailto_res = data[data['predicted_res']>0.0235]"
+    "data_mailto_res = data[data['predicted_res']>=0.0235]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "id": "03445861-f930-4794-b570-dd3811155465",
    "metadata": {},
    "outputs": [
@@ -693,7 +693,7 @@
        "1     1    859   0.060957"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "id": "45b0988f-093f-4185-9b19-d8b7e0268354",
    "metadata": {},
    "outputs": [
@@ -714,34 +714,44 @@
        "14092"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(data_mailto_res)"
+    "# Total number of customer to mail to\n",
+    "\n",
+    "total_to_mail = len(data_mailto_res)\n",
+    "total_to_mail"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "id": "12f2f4de-4d4c-4391-a948-cf5d2c68d92c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "634847.3894970001"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Profit = $634847.39\n"
+     ]
     }
    ],
    "source": [
-    "801821/20000*(859*60-14092*1.41)*0.50 # Because probability drop by half"
+    "# Calculate profit\n",
+    "\n",
+    "total_population = 801821\n",
+    "sample_size = 20000\n",
+    "profit_each_responder = 60\n",
+    "mailing_cost = 1.41\n",
+    "second_wave_probability_drop_to = 0.50\n",
+    "\n",
+    "profit1 = total_population/sample_size*(859*profit_each_responder-total_to_mail*mailing_cost)*second_wave_probability_drop_to\n",
+    "\n",
+    "print(f\"Profit = ${profit1:0.2f}\")"
    ]
   },
   {
