Update profit calculation for neural network

--- a/intuit_quicken.ipynb
+++ b/intuit_quicken.ipynb
@@ -788,6 +788,148 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "id": "d6f00639-17b8-4c04-882a-8f0cce805259",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_mailto_res_nn = data[data['p_nn']>=0.0235]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "bb0f6b5b-3fed-4a24-a603-c06d954f06e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Count</th>\n",
+       "      <th>Frequency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>11303</td>\n",
+       "      <td>0.930441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>845</td>\n",
+       "      <td>0.069559</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Name  Count  Frequency\n",
+       "0     0  11303   0.930441\n",
+       "1     1    845   0.069559"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mba263.tabulate(data_mailto_res_nn['res1'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "674a3560-6ed7-4986-a129-2a887e16f3ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12148"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Total number of customer to mail to\n",
+    "\n",
+    "total_to_mail_nn = len(data_mailto_res_nn)\n",
+    "total_to_mail_nn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "95659ee8-870d-446f-9494-1d937d1ee863",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Profit = $672954.73\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate profit\n",
+    "\n",
+    "total_population = 801821\n",
+    "sample_size = 20000\n",
+    "profit_each_responder = 60\n",
+    "mailing_cost = 1.41\n",
+    "second_wave_probability_drop_to = 0.50\n",
+    "\n",
+    "profit1_nn = total_population/sample_size*(845*profit_each_responder-total_to_mail_nn*mailing_cost)*second_wave_probability_drop_to\n",
+    "\n",
+    "print(f\"Profit = ${profit1_nn:0.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cc862ba-16f8-4fd1-ab38-e1087a957a85",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b21adee1-045f-4832-9f90-089b2f678e50",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "3b6e934c-29d5-4bf2-ac95-eddfb60e353f",
    "metadata": {},
