Edit Graph Section

--- a/intuit_quicken.ipynb
+++ b/intuit_quicken.ipynb
@@ -921,12 +921,14 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b21adee1-045f-4832-9f90-089b2f678e50",
+   "cell_type": "markdown",
+   "id": "ccd110c3-79b8-47c6-afd6-67fb0c25930f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---\n",
+    "\n",
+    "Graph Combination for **Gains**"
+   ]
   },
   {
    "cell_type": "code",
