--- a/intuit_quicken.ipynb
+++ b/intuit_quicken.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "26df4b1c-44f4-4677-9adf-422ae49c2f31",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "dd5ff6ef-cead-41ed-bedc-1c3ebba4fdba",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
        "[20000 rows x 13 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1540cf38-6aff-45d4-951e-f7e19386d1be",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
        "1     1    961    0.04805"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,12 +399,14 @@
    "id": "7144f400-9ade-47ca-a1ae-71a885859ff6",
    "metadata": {},
    "source": [
-    "The response rate = **4.805%**"
+    "The response rate of wave 1 = **4.805%**\n",
+    "\n",
+    "The response rate of wave 2 = 4.805% * 50% = **2.4025%**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c098863d-26b4-411d-b3f8-a4b42a91e456",
    "metadata": {},
    "outputs": [
@@ -576,7 +578,7 @@
        "4                   0                     1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d901e5e5-eb9a-4641-bf5b-283b143ba444",
    "metadata": {},
    "outputs": [
@@ -618,115 +620,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e4925a08-883b-4d3a-827d-5d6805508b66",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['predicted_res'] = res.predict()"
+    "data['predicted_logit'] = res.predict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ef5bb7fb-fdd3-487d-b59e-1fc8af1831fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total to mail by using logit method is 13233 customers\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Number of customers who have predicted response rate greater than\n",
+    "# the break-even point and does not respond to wave 1\n",
+    "\n",
+    "total_to_mail_logit = sum((data['predicted_logit']>=0.0235)&(data['res1']==0))\n",
+    "\n",
+    "print(f\"Total to mail by using logit method is {total_to_mail_logit} customers\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ef5bb7fb-fdd3-487d-b59e-1fc8af1831fc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_mailto_res = data[data['predicted_res']>=0.0235]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "03445861-f930-4794-b570-dd3811155465",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Count</th>\n",
-       "      <th>Frequency</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>13233</td>\n",
-       "      <td>0.939043</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>859</td>\n",
-       "      <td>0.060957</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Name  Count  Frequency\n",
-       "0     0  13233   0.939043\n",
-       "1     1    859   0.060957"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mba263.tabulate(data_mailto_res['res1'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "45b0988f-093f-4185-9b19-d8b7e0268354",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14092"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Total number of customer to mail to\n",
-    "\n",
-    "total_to_mail = len(data_mailto_res)\n",
-    "total_to_mail"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
    "id": "12f2f4de-4d4c-4391-a948-cf5d2c68d92c",
    "metadata": {},
    "outputs": [
@@ -734,22 +661,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Profit = $634847.39\n"
+      "Profit for logit method = $416.84\n"
      ]
     }
    ],
    "source": [
     "# Calculate profit\n",
     "\n",
-    "total_population = 801821\n",
-    "sample_size = 20000\n",
     "profit_each_responder = 60\n",
     "mailing_cost = 1.41\n",
-    "second_wave_probability_drop_to = 0.50\n",
+    "second_wave_response_rate = 0.024025\n",
     "\n",
-    "profit1 = total_population/sample_size*(859*profit_each_responder-total_to_mail*mailing_cost)*second_wave_probability_drop_to\n",
-    "\n",
-    "print(f\"Profit = ${profit1:0.2f}\")"
+    "profit_logit = (total_to_mail_logit*second_wave_response_rate*profit_each_responder-total_to_mail_logit*mailing_cost)\n",
+    "print(f\"Profit for logit method = ${profit_logit:0.2f}\")"
    ]
   },
   {
@@ -764,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "85ea29ff-3c3c-48e9-bdf9-8c9fa869a374",
    "metadata": {},
    "outputs": [],
@@ -776,117 +700,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "23f1e997-8958-425c-abbb-5c59e87d0d96",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['p_nn'] = res_nn.predict(data[['bizflag','zip_bins','numords',\n",
+    "data['predicted_nn'] = res_nn.predict(data[['bizflag','zip_bins','numords',\n",
     "                                      'dollars','last','sincepurch','version1','owntaxprod','upgraded',\n",
     "                                      'dummy_male','dummy_female','dummy_both_genders','dummy_unknown_gender']])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "d6f00639-17b8-4c04-882a-8f0cce805259",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_mailto_res_nn = data[data['p_nn']>=0.0235]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "bb0f6b5b-3fed-4a24-a603-c06d954f06e2",
-   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Count</th>\n",
-       "      <th>Frequency</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>11303</td>\n",
-       "      <td>0.930441</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>845</td>\n",
-       "      <td>0.069559</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Name  Count  Frequency\n",
-       "0     0  11303   0.930441\n",
-       "1     1    845   0.069559"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total to mail by using neural network method is 11303 customers\n"
+     ]
     }
    ],
    "source": [
-    "mba263.tabulate(data_mailto_res_nn['res1'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "674a3560-6ed7-4986-a129-2a887e16f3ff",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12148"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Total number of customer to mail to\n",
+    "# Number of customers who have predicted response rate greater than\n",
+    "# the break-even point and does not respond to wave 1\n",
     "\n",
-    "total_to_mail_nn = len(data_mailto_res_nn)\n",
-    "total_to_mail_nn"
+    "total_to_mail_nn = sum((data['predicted_nn']>=0.0235)&(data['res1']==0))\n",
+    "\n",
+    "print(f\"Total to mail by using neural network method is {total_to_mail_nn} customers\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "95659ee8-870d-446f-9494-1d937d1ee863",
    "metadata": {},
    "outputs": [
@@ -894,22 +743,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Profit = $672954.73\n"
+      "Profit for neural network method = $356.04\n"
      ]
     }
    ],
    "source": [
     "# Calculate profit\n",
     "\n",
-    "total_population = 801821\n",
-    "sample_size = 20000\n",
     "profit_each_responder = 60\n",
     "mailing_cost = 1.41\n",
-    "second_wave_probability_drop_to = 0.50\n",
+    "second_wave_response_rate = 0.024025\n",
     "\n",
-    "profit1_nn = total_population/sample_size*(845*profit_each_responder-total_to_mail_nn*mailing_cost)*second_wave_probability_drop_to\n",
-    "\n",
-    "print(f\"Profit = ${profit1_nn:0.2f}\")"
+    "profit_nn = (total_to_mail_nn*second_wave_response_rate*profit_each_responder-total_to_mail_nn*mailing_cost)\n",
+    "print(f\"Profit for neural network method = ${profit_nn:0.2f}\")"
    ]
   },
   {
@@ -924,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "f8363610-4afd-4222-9ca0-7cb179b2efc5",
    "metadata": {},
    "outputs": [],
@@ -934,105 +780,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "57d16d8a-dced-4c02-9cad-64abf9d3655d",
+   "execution_count": 21,
+   "id": "fa018b3d-c62e-4d47-ada8-bc53919375be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['rfm_p']=mba263.get_means(data['res1'],data['rfm'])\n",
-    "data_mailing_sq = data[data['rfm_p']>=0.0235]"
+    "data['predicted_rfm']=mba263.get_means(data['res1'],data['rfm'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "8de9a6b8-8722-4ee7-a511-c85b8be3dfb0",
+   "execution_count": 22,
+   "id": "57d16d8a-dced-4c02-9cad-64abf9d3655d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Count</th>\n",
-       "      <th>Frequency</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>14695</td>\n",
-       "      <td>0.942591</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>895</td>\n",
-       "      <td>0.057409</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Name  Count  Frequency\n",
-       "0     0  14695   0.942591\n",
-       "1     1    895   0.057409"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total to mail by using RFM method is 14695 customers\n"
+     ]
     }
    ],
    "source": [
-    "mba263.tabulate(data_mailing_sq['res1'])"
+    "# Number of customers who have predicted response rate greater than\n",
+    "# the break-even point and does not respond to wave 1\n",
+    "\n",
+    "total_to_mail_rfm = sum((data['predicted_rfm']>=0.0235)&(data['res1']==0))\n",
+    "\n",
+    "print(f\"Total to mail by using RFM method is {total_to_mail_rfm} customers\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "2f7ef598-b9c9-4cde-95a8-37df3ed1f044",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15590"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Mail to\n",
-    "total_mail_rfm = len(data_mailing_sq)\n",
-    "total_mail_rfm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "id": "2f80202f-8f9e-4065-a6e5-f94036191099",
    "metadata": {},
    "outputs": [
@@ -1040,22 +821,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Profit = $635805.97\n"
+      "Profit for RFM method = $462.89\n"
      ]
     }
    ],
    "source": [
     "# Calculate profit\n",
     "\n",
-    "total_population = 801821\n",
-    "sample_size = 20000\n",
     "profit_each_responder = 60\n",
     "mailing_cost = 1.41\n",
-    "second_wave_probability_drop_to = 0.50\n",
+    "second_wave_response_rate = 0.024025\n",
     "\n",
-    "profit_rfm = total_population/sample_size*(895*profit_each_responder-total_mail_rfm*mailing_cost)*second_wave_probability_drop_to\n",
-    "\n",
-    "print(f\"Profit = ${profit_rfm:0.2f}\")"
+    "profit_rfm = (total_to_mail_rfm*second_wave_response_rate*profit_each_responder-total_to_mail_rfm*mailing_cost)\n",
+    "print(f\"Profit for RFM method = ${profit_rfm:0.2f}\")"
    ]
   },
   {
@@ -1070,34 +848,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "id": "3b6e934c-29d5-4bf2-ac95-eddfb60e353f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Gains for Logit\n",
-    "gains1=mba263.gain(data['res1'],data['predicted_res'],bins=30)\n",
+    "gains1=mba263.gain(data['res1'],data['predicted_logit'],bins=30)\n",
     "\n",
     "# Gains for Neural Network\n",
-    "gains_nn=mba263.gain(data['res1'],data['p_nn'],30)\n",
+    "gains_nn=mba263.gain(data['res1'],data['predicted_nn'],30)\n",
     "\n",
     "# Gains for RFM\n",
-    "gains_rfm=mba263.gain(data['res1'],data['rfm_p'],30)"
+    "gains_rfm=mba263.gain(data['res1'],data['predicted_rfm'],30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "id": "2cb0ceb1-5db3-41af-90c3-9e172d1203bb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc0b1814990>]"
+       "[<matplotlib.lines.Line2D at 0x7fa0971ab410>]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1125,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "473d3c80-bc66-4ac6-9b10-12d56c27859d",
+   "id": "f8135c6f-0b7d-4bb0-b594-3173b57a38d2",
    "metadata": {},
    "outputs": [],
    "source": []
